--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,4 @@
+@import "~@flaticon/flaticon-uicons/css/all/all";
 .App {
   text-align: center;
   display: flex;
@@ -6,7 +7,11 @@
   justify-content: center;
   color: white;
   /* background-image: linear-gradient(79deg, #622dcca0, #f069de 48%, #eebe6a); */
-  background-image: linear-gradient(60deg, #622dccd9, #f069de 48%, #eebd6ad7), url('./assets/bg.png');
+  background-image: linear-gradient(60deg, #C3D2DAd9, #d3c3dade 48%, #dac3d5d7), url('./assets/bg.png');
+  /* save ↓↓↓ */
+  /* background-image: linear-gradient(60deg, #622dccd9, #f069de 48%, #eebd6ad7), url('./assets/bg.png'); */
+  /* save ↑↑↑ */
+
   /* background-image: linear-gradient(60deg, #007f8df2, #dfbd39 48%, #fffed8ea), url('./assets/bg.png'); */
   /* background-image: linear-gradient(60deg, #41dff4f2, #f0eee8 48%, #fa65e1ea), url('./assets/bg.png'); */
   background-size: cover;
